fluxcd/clusters/pi/home/bazarr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  namespace: home
  labels:
    app: bazarr
spec:
  serviceName: bazarr
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      name: bazarr
      namespace: home
      labels:
        app: bazarr
    spec:
      terminationGracePeriodSeconds: 120
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.6.1
          ports:
            - containerPort: 6767
              name: bazarr-port
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sync; sleep 5"]
          volumeMounts:
            - name: bazarr-configs
              mountPath: /config
            - name: media-root
              mountPath: /media
      volumes:
        - name: media-root
          nfs:
            server: 192.168.86.11
            path: /mnt/nas/media
            readOnly: false
      #   - name: bazarr-configs
      #     persistentVolumeClaim:
      #       claimName: bazarr-configs-local
  volumeClaimTemplates:
    - metadata:
        name: bazarr-configs
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 200Mi
