fluxcd/clusters/pi/home/bazarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: home
spec:
  selector:
    app: bazarr
  ports:
    - name: bazarr-port
      port: 80
      targetPort: bazarr-port
